--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,18 +4,18 @@ description: Beatiful Tic Tac Toe Game
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  cupertino_icons: ^1.0.5
+
   percent_indicator: ^4.2.3
   rxdart: ^0.27.7
   get_it: ^7.6.0
   rflutter_alert: ^2.0.7
-  audioplayers: ^3.0.1
-  sliding_up_panel: ^2.0.0+1
+  audioplayers: ^4.1.0
+  sliding_up_panel2: ^3.3.0+1
 
 dev_dependencies:
   flutter_test:
